<resources>
    <string name="app_name">万能遥控器</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="test_key_position">测试按键 (%1$d/%2$d)</string>
    <string name="cofirm">确定</string>


    <!--登陆模块-->
    <string name="login_username">邮箱/手机号</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="reget_password">找回密码</string>
    <string name="regist_now">现在注册</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="please_input_verify_code">输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="confirm_password">确认密码</string>
    <string name="regist">注册</string>
    <string name="send_success">发送成功</string>
    <string name="please_input_right_number">请输入正确的手机号码</string>
    <string name="password_not_equal">两次输入密码不一致</string>
    <string name="verification_error">验证码错误</string>
    <string name="username_password_cannot_empty">账户和密码不能为空</string>
    <string name="login_success">登陆成功</string>
    <string name="connect_failure">连接服务器失败，请检查网络连接</string>
    <string name="remember_password">记住密码</string>
    <string name="login_failure">登陆失败，请检查账户和密码是否正确</string>
    <string name="auto_login">自动登陆</string>
    <string name="user_exist">该用户已存在，请直接登陆</string>
    <string name="please_input_username">请输入用户名</string>

</resources>
